testsuite/tests/partial-sigs/should_fail/InstantiatedNamedWildcardsInConstraints.stderr

InstantiatedNamedWildcardsInConstraints.hs:4:8: error:
    • Found type wildcard ‘_’ standing for ‘Show b’
      Where: ‘b’ is a rigid type variable bound by
               the inferred type of foo :: (Enum b, Show b) => b -> (String, b)
               at InstantiatedNamedWildcardsInConstraints.hs:5:1-26
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: foo :: (Enum _a, _) => _a -> (String, b)

InstantiatedNamedWildcardsInConstraints.hs:4:14: error:
    • Found type wildcard ‘_a’ standing for ‘b’
      Where: ‘b’ is a rigid type variable bound by
               the inferred type of foo :: (Enum b, Show b) => b -> (String, b)
               at InstantiatedNamedWildcardsInConstraints.hs:5:1-26
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: foo :: (Enum _a, _) => _a -> (String, b)
